--- a/html/css/style.css
+++ b/html/css/style.css
@@ -17,7 +17,7 @@
     margin: 0 auto;
 }
 .header {
-    background-color: rgb(255, 180, 41);
+    background-color: rgba(255, 180, 41, 0.9);
     overflow: hidden;
 }
 
@@ -68,34 +68,4 @@ a {
 
 .category_menu > a {
     color: #333;
-}
-
-
-.product_list {
-    display: inline-block;
-    /* width: 100%; */
-    overflow: hidden;
-}
-
-.product_list > ul {
-    /* display: inline-block; */
-    /* margin-left: -10px; */
-}
-
-/* margin으로 아이템들 속성 띄움 */
-.item {
-    float: left;
-    margin: 0 0 10px 10px;
-    width: 180px;
-    height: 240px;
-    color: #222;
-}
-
-/* 제일 안쪽 a태그에서 길이를 주면(inline-block) 꽉차게 됨 */
-.item > a {
-    /* color: #333; */
-    background-color: orange;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
 }
