--- a/html/css/style.css
+++ b/html/css/style.css
@@ -16,6 +16,11 @@
     min-width: 960px;
     margin: 0 auto;
 }
+
+.content {
+    position: relative;    
+}
+
 .header {
     background-color: rgba(255, 180, 41, 0.9);
     overflow: hidden;
@@ -50,22 +55,4 @@ a {
 .order {
     background-color: green;
     border-radius: 0.5rem;
-}
-
-
-.category {
-    margin-top: 10px;
-    background-color: aqua;
-    overflow: hidden;
-}
-
-.category > div > ul {
-}
-
-.category_menu {
-    margin: 0 80px;
-}
-
-.category_menu > a {
-    color: #333;
 }
