--- a/html/css/item.css
+++ b/html/css/item.css
@@ -1,6 +1,7 @@
 .product_list {
     display: inline-block;
-    /* width: 100%; */
+    position: relative;
+    width: 100%;
     overflow: hidden;
 }
 
@@ -32,16 +33,25 @@ li.item {
     display: inline-block;
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    align-items: center;
 }
 
 .item_img {
     height: 110px;
     border-radius: 50%;
     margin-top: 10px;
+    object-fit: cover;
 }
 
 .item_info {
     position: relative;
+}
+
+.item .item_text {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 /* BEST PRODUCT */
