--- a/html/css/k-style.css
+++ b/html/css/k-style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
 
-* {
+/* * {
   font-family: "Noto Sans KR", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -8,7 +8,8 @@
 
   margin: 0;
   padding: 0;
-}
+  box-sizing: border-box;
+} */
 
 .container {
   width: 960px;
@@ -48,7 +49,7 @@ a {
   text-decoration: none;
   display: block;
   padding: 1rem 1rem;
-  margin: 0.6rem 0.2rem;
+  margin: 0.5rem 0.2rem;
 }
 
 .order {
